everything/gitops/apps/n-back/backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n-back-backend
  namespace: n-back
  labels:
    app: n-back-backend
spec:
  type: ClusterIP
  selector:
    app: n-back-backend
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
